--- a/dojinshikanri.html
+++ b/dojinshikanri.html
@@ -1,14 +1,23 @@
-<main>
-<p>以下に「ウスマス」（以下、本アプリ）のプライバシーポリシーを記載します。</p>
+<!DOCTYPE html>
+<html lang="ja">
+  <head>
+    <meta charset="utf-8">
+    <title>プライバシーポリシー - ウスマス</title>
+  </head>
+  <body>
+    <main>
+      <p>以下に「ウスマス」（以下、本アプリ）のプライバシーポリシーを記載します。</p>
 
-<h3>広告配信について</h3>
-<p>本アプリは、第三者配信の広告サービスを利用しています。Googleの広告における詳細については、<a rel="noreferrer noopener" href="http://www.google.co.jp/policies/technologies/ads/" target="_blank">Google のポリシーと規約の広告</a>を参照してください。</p>
+      <h3>広告配信について</h3>
+      <p>本アプリは、第三者配信の広告サービスを利用しています。Googleの広告における詳細については、<a rel="noreferrer noopener" href="http://www.google.co.jp/policies/technologies/ads/" target="_blank">Google のポリシーと規約の広告</a>を参照してください。</p>
 
-<h3>利用状況解析について</h3>
-<p>本アプリは、利用状況解析のために Google Firebase Analytics を使用しています。Google Firebase Analytics の利用により収集されたデータは、Googleのプライバシーポリシーに基づいて管理されます。詳細については、<a rel="noreferrer noopener" href="http://www.google.com/intl/ja/policies/privacy/" target="_blank">Googleのプライバシーポリシー</a>を参照してください。</p>
+      <h3>利用状況解析について</h3>
+      <p>本アプリは、利用状況解析のために Google Firebase Analytics を使用しています。Google Firebase Analytics の利用により収集されたデータは、Googleのプライバシーポリシーに基づいて管理されます。詳細については、<a rel="noreferrer noopener" href="http://www.google.com/intl/ja/policies/privacy/" target="_blank">Googleのプライバシーポリシー</a>を参照してください。</p>
 
-<h3>データ引継ぎについて</h3>
-<p>本アプリは、データ引継ぎのために Google が提供する Cloud Firestore および Firebase Authentication を使用しています。これらに収集されるユーザーのデータは、データ引継ぎ以外の目的で利用することはありません。</p>
+      <h3>データ引継ぎについて</h3>
+      <p>本アプリは、データ引継ぎのために Google が提供する Cloud Firestore および Firebase Authentication を使用しています。これらに収集されるユーザーのデータは、データ引継ぎ以外の目的で利用することはありません。</p>
 
-<p>代表者：ゆう<br>連絡先：info@sasadango.info</p>
-</main>
+      <p>代表者：ゆう<br>連絡先：info@sasadango.info</p>
+    </main>
+  </body>
+</html>
