--- a/dojinshikanri.html
+++ b/dojinshikanri.html
@@ -5,7 +5,7 @@
     <title>プライバシーポリシー - ウスマス</title>
   </head>
   <body>
-    <main style="margin: 2em;">
+    <main>
       <p>以下に「ウスマス」（以下、本アプリ）のプライバシーポリシーを記載します。</p>
 
       <h3>広告配信について</h3>
