--- a/dojinshikanri.html
+++ b/dojinshikanri.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <main>
+      <h1>プライバシーポリシー - ウスマス</h1>
       <p>以下に「ウスマス」（以下、本アプリ）のプライバシーポリシーを記載します。</p>
 
       <h3>広告配信について</h3>
